# agent-team

./: .gitignore  .workflow-repos.json  README.md  agent-team.config.md  agent-team.workflow.yaml  arch.md  init-target-repo.sh  skill-audit.md  sync-hermes-skills.sh  sync.sh
.rlm/: CONTEXT-MAP.md  dogfood-mac-instructions.md  flow-visualization.html  v2-todo.md
_shared/: README.md
commands/: create-agent-employ.md
docs/: flow.html
observability/: .env.example  docker-compose.yml
scripts/: README.md  claims.sh  poll.sh  pre-triage.sh  (+5 more)
tools/rlm/: .gitignore  README.md  pyproject.toml
tools/rlm/rlm/: __init__.py  __main__.py  cli.py  context.py  discover.py  errors.py  frontmatter.py  idempotency.py  identity.py  runner.py  triples.py
tools/rlm/rlm/adapters/: __init__.py  gh.py  git.py  redis_log.py
tools/rlm/rlm/commands/: __init__.py  add_contract.py  append_business_model.py  append_deployment_constraints.py  append_fact.py  approve_workpackage.py  commit_spec.py  commit_workpackage.py  confirm_spec.py  enqueue_message.py  mark_delivered.py  mark_in_progress.py  mark_superseded.py  open_pr.py  propose_adr.py  propose_context_change.py  record_signal.py  supersede_fact.py
tools/rlm/rlm/routing/: __init__.py  commit.py  issue.py  pr.py
tools/rlm/tests/: conftest.py  test_cli.py  test_discover.py  test_frontmatter.py  test_identity.py  test_mark_in_progress.py
tools/rlm/tests/scenarios/: test_business_snapshots.py  test_facts.py  test_intake_happy_path.py  test_layer6.py  test_pr_routed.py  test_spec_supersession.py  test_workpackage_create.py
(+395 files in other folders)
