[project]
name = "rlm"
version = "0.1.0"
description = "RLM CLI — unified write interface for the AI Agent-Team RLM. Implements .rlm/contracts/rlm-cli.md."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AI Agent-Team" }]
license = { text = "MIT" }
keywords = ["rlm", "agent-team", "cli"]

dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "redis>=5.0",
]

[project.scripts]
rlm = "rlm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rlm"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "types-redis>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"] # line-length, handled by formatter

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
